# lang-guardx

./: .gitignore  .pre-commit-config.yaml  README.md  __init__.py  pyproject.toml  requirements.txt  ruff.toml
detection/: __init__.py  core.py  indirect.py  regex.py  sql_intent.py
lang_guardx/: __init__.py  cli.py
lang_guardx/adaptive/: adaptive_engine.py  threat_ontology.py  threat_taxonomy.yaml
lang_guardx/agent/: __init__.py  adapter.py  engine.py  policy.py
lang_guardx/detection/: __init__.py  bloom.py  cli.py  core.py  indirect.py  regex.py  sql_intent.py
lang_guardx/langchain_layer/: __init__.py  agent.py  chain.py  core.py  sql_policy.py
models/: distilbert_finetune.py
scripts/: create_db.py  distillbert_finetune.py  sql_policy_dataset.py
tests/: layer_1.py  layer_2.py  smoke_test_agent.py  smoke_test_layer4.py  test_layer1.py  test_layer3.py
tests/evals/: rq1.py  rq2.py
tests/integration/: test_agent_endtoend.py
training/: kfold_results.csv  training_data.csv  training_stats.json  upload_model.py
