[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langguardx"
version = "0.2.0"
description = "Adaptive multi-layer security middleware for LangChain SQL agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "K Pranav", email = "pranav2005.kp@example.com" }]

dependencies = [
    "mmh3>=3.0.0",
    "bitarray>=2.7.0",
    "huggingface-hub>=0.20.0",
    "safetensors>=0.4.0",
    "sqlglot>=23.0.0",
]

[project.optional-dependencies]
ml = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
]
langchain = [
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-community>=0.0.1",
    "SQLAlchemy>=2.0.0",
]
dev = [
    "pytest>=9.0.0",
    "pandas>=2.0.0",
]

[project.scripts]
langguardx-verify = "lang_guardx.cli:verify"

[tool.hatch.build.targets.wheel]
packages = ["lang_guardx"]
exclude = ["models/", "training/", "tests/"]
